--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "totorobot"
-version = "0.1.3"
+version = "0.1.4"
 authors = ["David Mytton <david@davidmytton.co.uk>"]
 edition = "2018"
 
@@ -11,6 +11,7 @@ name = "totorobot"
 [dependencies]
 log = "^0.4.14"
 mailchimp = "^0.1.15"
+num-format = "^0.4.0"
 reqwest = { version = "^0.11.0", features = ["blocking", "json"] }
 rocket = "^0.4.6"
 serde = "1.0"
